[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clocking"
version = "0.0.6"
readme = "README.md"
license = {text = "GNU General Public License v3.0"}
keywords = ['clocking', 'work', 'time', 'date', 'datetime', 'project',
            'database', 'track', 'server', 'client']
authors = [{ name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" }]
maintainers = [
    { name = "Matteo Guadrini", email = "matteo.guadrini@hotmail.it" },
]
description = "Command line utility to track the worked time."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = ['prettytable']

[project.scripts]
reports = "clocking.cli:main"

[project.urls]
homepage = "https://github.com/MatteoGuadrini/clocking'"
documentation = "https://clocking.readthedocs.io/en/latest/"
repository = "https://github.com/MatteoGuadrini/clocking.git"
changelog = "https://github.com/MatteoGuadrini/clocking/blob/master/CHANGES.md"